--- a/templates/register.html
+++ b/templates/register.html
@@ -51,6 +51,7 @@
                           <option value="Arts">Arts</option>
                           <option value="Management">Management</option>
                           <option value="Education">Education</option>
+			<option value="Engineering">Engineering</option>
                         </select>
                         <br>
                       </div>
